--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -26,7 +26,7 @@
     <li><a href="${oversight_path}">HERON
     Sponsorship Request</a>
     </li>
-    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">HERON
+    <li><a href="${oversight_path}?is_data_request=1">HERON
     Data Usage Request</a>
     </li>
   </ul>
