Note 10 person limit in team builder

--- a/heron_wsgi/htdocs-heron/build_team.html
+++ b/heron_wsgi/htdocs-heron/build_team.html
@@ -14,6 +14,8 @@
  Usage</py:if>:
  Select Team</h1>
 
+<p>Choose up to 10 people per request.</p>
+
 <py:def function="peopleTable(people, pfx)">
 <table py:if="people">
   <tr>
