only display investigator links if faculty
--HG--
branch : recap

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -21,7 +21,7 @@
   </ul>
   </div>
 
-  <div class="header png"><h3>Investigator Requests</h3>
+  <div py:if="faculty" class="header png"><h3>Investigator Requests</h3>
   <ul>
     <li><a href="${oversight_path}">HERON
     Sponsorship Request</a>
