- Port executive feature; use config file rather than DB for userids.
- don't use debug flag on AuthTktAuthenticationPolicy

--- a/heron_wsgi/admin_lib/mockDirectory.html
+++ b/heron_wsgi/admin_lib/mockDirectory.html
@@ -30,6 +30,16 @@
 	Faculty? <em class="kumcPersonFaculty">N</em> <br />
 	Job Code: <code class="kumcPersonJobcode">0</code>
 	trained thru: <strong class="dtend">2012-01-01</strong></li>
+
+	<li class="hcard" id="big.wig"><span class="n"><b
+		class="family-name">Wig</b>, <span class="given-name">Big</span></span>
+	<br />
+	<b class="email">big.wig@js.example</b> <br />
+	Faculty? <em class="kumcPersonFaculty">N</em> <br />
+	Job Code: <code class="kumcPersonJobcode">0</code>
+	trained thru: <strong class="dtend">2012-01-01</strong> <br />
+	<strong class="role">HERON Executive</strong>
+	</li>
 </ul>
 </body>
 </html>
