--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -23,10 +23,10 @@
 
   <div py:if="faculty" class="header png"><h3>Investigator Requests</h3>
   <ul>
-    <li><a href="${oversight_path}">HERON
+    <li><a href="${sponsorship_path}">HERON
     Sponsorship Request</a>
     </li>
-    <li><a href="${oversight_path}?is_data_request=1">HERON
+    <li><a href="${data_use_path}">HERON
     Data Usage Request</a>
     </li>
   </ul>
