send decision notices, lot them in a table (#577)   - oversight_decision() is per request, not per candidate   - export MedCenter.lookup()   - move decision record processing into decisions_detail()

--- a/heron_wsgi/admin_lib/mockDirectory.html
+++ b/heron_wsgi/admin_lib/mockDirectory.html
@@ -23,6 +23,15 @@
 	Faculty? <em class="kumcPersonFaculty">N</em> <br />
 	Job Code: <code class="kumcPersonJobcode">0</code></li>
 
+	<li class="hcard" id="carol.student"><span class="n">
+	    <b class="family-name">Student</b>,
+	    <span class="given-name">Carol</span></span>
+	  <br />
+	  <b class="email">carol.student@js.example</b> <br />
+	  Faculty? <em class="kumcPersonFaculty">N</em> <br />
+	  Job Code: <code class="kumcPersonJobcode">0</code>
+	</li>
+
 	<li class="hcard" id="some.one"><span class="n"><b
 		class="family-name">One</b>, <span class="given-name">Some</span></span>
 	<br />
