--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -12,12 +12,17 @@
   <div class="header png"><h3>i2b2 Query and Analysis Tool</h3>
   <ul>
     <li>
-  <form method="post" action="${i2b2_login_path}">
-    <p class="doit">
-      <input type="submit" py:attrs="accessDisabled" value="Start Query Tool" />
-    </p>
-  </form>
-  </li>
+      <a href="${i2b2_login_path}">Start Query Tool</a>
+    </li>
+  </ul>
+  </div>
+
+  <div class="header png"><h3>Training Materials</h3>
+  <ul>
+    <li><a href=
+	"http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials"
+	>HERON Access</a>
+    </li>
   </ul>
   </div>
 
@@ -68,17 +73,17 @@
   <em>view-only</em> access to do patient count queries, executing
   a system access agreement is the only requirement.</p>
 
-  <p><a href=
+  <p>The <a href=
 	"http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials"
-	>Getting Access to HERON</a> explains the process in detail.
+	>HERON Access guide</a> explains the process in detail.
   </p>
 
   <p>A Data Request Oversight Committee (DROC) oversees requests to:</p>
   <ul>
-    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">sponsor
+    <li><a href="http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials/SponsoringUsers">sponsor
     collaborators and research team members</a></li>
 
-    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">extract
+    <li><a href="http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials/DataAccess">extract
     data sets</a></li>
   </ul>
 
