--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -11,11 +11,11 @@
   <div id="menu">
   <div class="header png"><h3>i2b2 Query and Analysis Tool</h3>
   <ul>
-    <li py:if="not accessDisabled">
+    <li py:if="'disabled' not accessDisabled">
       <a href="${i2b2_login_path}"
 	 >Start Query Tool</a>
     </li>
-    <li py:if="accessDisabled">
+    <li py:if="'disabled' in accessDisabled">
       <button disabled="disabled"
 	 >Start Query Tool</button>
     </li>
