fix test for access disabled (#787)
--HG--
branch : authz

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -11,7 +11,7 @@
   <div id="menu">
   <div class="header png"><h3>i2b2 Query and Analysis Tool</h3>
   <ul>
-    <li py:if="'disabled' not accessDisabled">
+    <li py:if="'disabled' not in accessDisabled">
       <a href="${i2b2_login_path}"
 	 >Start Query Tool</a>
     </li>
