update DROC redcap project link (#798)
--HG--
branch : authz

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -44,7 +44,7 @@
 
   <div class="header png"><h3>Oversight</h3>
   <ul>
-    <li><a href="https://redcap.kumc.edu/redcap_v4.1.0/setup.php?pid=238">DROC Oversight Tools</a></li>
+    <li><a href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238">DROC Oversight Tools</a></li>
   </ul>
   </div>
   </div>
