change link text to "Informatics Project Request" (#562)
--HG--
branch : authz

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -108,7 +108,7 @@
 
   <p>To set up consultation regarding your project, complete a
   <a href="http://biostat-pts.kumc.edu/eres/jsp/kumcpr.jsp"
-     >Biostatistics Department Project Request Form</a>.
+     >Informatics Project Request</a>.
   </p>
   </div>
   
