--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -106,7 +106,7 @@
   >KUMC Calendar</a> for the date of the next clinic.</em>
 </p>
 
-  <p>To set up consultation regarding your project, complete a
+  <p>To set up consultation regarding your project, complete an
   <a href="http://biostat-pts.kumc.edu/eres/jsp/kumcpr.jsp"
      >Informatics Project Request</a>.
   </p>
