Fixed clinic name typo

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -86,7 +86,7 @@
 
   <p>The <a href=
   "http://informatics.kumc.edu/work/blog/2011/07/first-clinic"
-  >Frontiers Clinical/Translational Informatics Clinic</a> meets every
+  >Frontiers Clinical and Translational Informatics Clinic</a> meets every
   other Tuesday for investigators needing assistance using informatics
   tools for data exploration, cohort discovery, and data collection.
   The clinic is a brainstorming session and an education forum for
