#6562 update HERON website

--- a/heron_wsgi/htdocs-raven/index.html
+++ b/heron_wsgi/htdocs-raven/index.html
@@ -17,7 +17,7 @@
 
     <p>Materials that were available via the RAVEN portal are being
     integrated into the overall web site of <a
-    href="http://frontiers.kumc.edu/">Frontiers: The Heartland
+    href="https://www.kufrontiers.org">Frontiers: The Heartland
     Institute for Clinical and Translational Research</a>.
     </p>
 
